updated sirepo links; renamed emittance-issues to fodo-transport and removed dispersion section (redundent).

--- a/Build-your-own-beamline.ipynb
+++ b/Build-your-own-beamline.ipynb
@@ -28,14 +28,16 @@
     "FODO is the most commonly-cited example of periodic transverse focusing, but it is far from the only option. Depending on the application, other configurations may be used. For example, light sources use optics optimized for dispersion-free regions. Collider rings require optics that create a small spot-size at the interaction point. \n",
     "\n",
     "Open simulation “FODObeamline.” Copy it to your own session (there should be a prompt).\n",
-    "> https://beta.sirepo.com/elegant#/source/LIq0KHJG\n",
+    "> https://www.sirepo.com/elegant#/source/NYrwE02y\n",
     "\n",
     "We will try examining a different type of periodic focusing system designed by you.\n",
     "\n",
     "Under “Lattice” tab: Construct a single cell consisting of two or more quadrupoles and find the periodic solution. \n",
     "- Keep in mind that for the “alternating gradient” property of quadrupole lattices, we require both polarities (F & D) for stability.\n",
-    "- hint: You can re-use the existing beamline elements and/or create new elements. \n",
-    "- Add a new beamline under the “Beamlines” box; drag and drop elements to the beamline editor to create your cell.)\n",
+    "- You can re-use the existing beamline elements and/or create new elements. \n",
+    "- Add a new beamline under the “Beamlines” box; drag and drop elements to the beamline editor to create your cell.\n",
+    "- As a general rule, different magnets should be separated by drift spaces. \n",
+    "- Decide whether you'd like to make a ring or linear accelerator. If it's a ring, include a dipole in your periodic design. It can bend up to $90^{\\circ}$ or as little as $<1^{\\circ}$. \n",
     "\n",
     "Some Inspiration:\n",
     "- Non-FODO doublet -F-D- (L_1≠L_2)\n",
@@ -98,9 +100,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
