--- a/Dispersion-Chromaticity.ipynb
+++ b/Dispersion-Chromaticity.ipynb
@@ -7,7 +7,7 @@
     "![alt text](uspas.png)\n",
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
-    "# Computer Lab: Dispersion and Chromaticity\n",
+    "# Computer Lab: Dispersion and Chromaticity in Simulated Beam Transport\n",
     "##### Author: K. Ruisard\n",
     "\n",
     "## We will be simulating beam transport in simple beamlines. To do this, we will be running the Elegant code in the [Sirepo](https://beta.sirepo.com) environment. Questions to be turned in for credit are in **bold** and numbered.\n",
@@ -40,7 +40,7 @@
     "|  FODO cell length | $L = 5$ m|\n",
     "\n",
     "Open simulation “FODObeamline.” Copy it to your own session (there should be a prompt).\n",
-    "> https://beta.sirepo.com/elegant#/source/LIq0KHJG\n",
+    "> https://www.sirepo.com/elegant#/source/NYrwE02y\n",
     "\n",
     "- Go to Visualization tab at top of the page.\n",
     "- Change simulation to run over 1 cell (simulate beamline “FODOcell” in the drop down box). \n",
@@ -100,7 +100,7 @@
     "### B) Zero-dispersion insert\n",
     "\n",
     "Open simulation DispersionFree (copy the simulation):\n",
-    "> https://beta.sirepo.com/elegant#/source/tzedA3Co\n",
+    "> https://www.sirepo.com/elegant#/source/dW4biLsM\n",
     "\n",
     "The lattice cell in this simulation has two 20-degree bends and five quadrupoles.  \n",
     "The quadrupoles are initially set to zero-strength and matching is disabled.  \n",
@@ -223,9 +223,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
