--- a/Dispersion-Chromaticity.ipynb
+++ b/Dispersion-Chromaticity.ipynb
@@ -16,6 +16,10 @@
     "- Press shift+enter to execute a cell, or use the play button at the top of the window\n",
     "- Make sure you exectue cells in order, or re-exectue cells if you change something at the top of the notebook.\n",
     "- You can also exectue the whole notebook by using 'Run all cells' under the 'Run' tab.\n",
+    "\n",
+    "</br>\n",
+    "Also helpful: Shift+right click brings up OS/browser right-click menu, can copy image or save.\n",
+    "\n",
     "----------"
    ]
   },
@@ -39,8 +43,10 @@
     "|  Quadrupole geometric strength | $K = 0.6$ m$^{-2}$|\n",
     "|  FODO cell length | $L = 5$ m|\n",
     "\n",
-    "Open simulation “FODObeamline.” Copy it to your own session (there should be a prompt).\n",
+    "Open simulation “FODObeamline.” \n",
     "> https://www.sirepo.com/elegant#/source/NYrwE02y\n",
+    "\n",
+    "You already access this same simulation in the FODO-transport lab. Clicking on the link should lead to a prompt to either \"open simulation\" or \"open existing simulation.\" Select \"open simulation,\" which will revert changes that you made during the previous lab. To double check, make sure quadrupole strengths \"k1\" are set to $0.6\\ m^{-2}$. \n",
     "\n",
     "- Go to Visualization tab at top of the page.\n",
     "- Change simulation to run over 1 cell (simulate beamline “FODOcell” in the drop down box). \n",
@@ -99,7 +105,7 @@
    "source": [
     "### B) Zero-dispersion insert\n",
     "\n",
-    "Open simulation DispersionFree (copy the simulation):\n",
+    "Open simulation DispersionFree:\n",
     "> https://www.sirepo.com/elegant#/source/dW4biLsM\n",
     "\n",
     "The lattice cell in this simulation has two 20-degree bends and five quadrupoles.  \n",
@@ -119,7 +125,7 @@
    "metadata": {},
    "source": [
     "- Go to 'Lattice' at the top of the page.\n",
-    "- “Turn on” the middle quadrupole (Q1) at $k_1=1$ 𝑚−2. Note the effect this has on the dispersion function.\n",
+    "- “Turn on” the middle quadrupole (Q1) at $k_1=1\\ m^{-2}$. Note the effect this has on the dispersion function.\n",
     "- Adjust the strength of Q1 to find the solution for which dispersion is zero after the two bends.\n",
     "- Hint: you will need to restart the simulation after you change K. "
    ]
@@ -138,7 +144,7 @@
     "Enable matching (Under in Control tab -> twiss_output command -> set “Matched” to “yes”).  \n",
     "- Run simulation; you should see that beamline is unstable, i.e. there are no periodic solutions. \n",
     "Let’s add some additional focusing to correct that.\n",
-    "- “Turn on” the flanking quadrupoles by setting Q2: $k_1=1.3$ 𝑚−2 and Q3: $k_1=-1.6$ 𝑚−2. \n",
+    "- “Turn on” the flanking quadrupoles by setting Q2: $k_1=1.3\\ m^{-2}$ and Q3: $k_1=-1.6\\ m^{-2}$. \n",
     "- Re-run to find matched solution.\n",
     "\n",
     "Congrats! You’ve made a double-bend achromat.  \n",
