added image subfolder path to notebooks

--- a/Dilution.ipynb
+++ b/Dilution.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](uspas.png)\n",
+    "![alt text](images/uspas.png)\n",
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
     "# Computer Lab: Emittance Dilution\n",
