--- a/Lab-setup.ipynb
+++ b/Lab-setup.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](uspas.png)\n",
+    "![alt text](images/uspas.png)\n",
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
     "# Computer Lab: Setting up Python and JupyterLab\n",
@@ -132,9 +132,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
