--- a/Dispersion-Chromaticity.ipynb
+++ b/Dispersion-Chromaticity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](uspas.png)\n",
+    "![alt text](images/uspas.png)\n",
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
     "# Computer Lab: Dispersion and Chromaticity in Simulated Beam Transport\n",
@@ -58,7 +58,7 @@
     "- Under 'Beamlines', hover over FODOcell, and click 'Edit'\n",
     "- Replace 2 meter drift (D2) with two 0.75 meter drifts (D3). \n",
     "- Sandwich a dipole between the two difts (0.5 m, 20 deg dipole - element CSBEND):\n",
-    "![alt text](dipole.png)\n",
+    "![alt text](images/dipole.png)\n",
     "- You can add your new element in by dragging and dropping the name from the right hand side into the left hand side.\n",
     "- Under Tab: Control -> twiss_output, Change Matched to Yes (page 1). \n",
     "- Go to Visualization tab at top of the page.\n",
