--- a/Lab-setup.ipynb
+++ b/Lab-setup.ipynb
@@ -41,7 +41,7 @@
     "- open navigator https://docs.anaconda.com/anaconda/user-guide/getting-started/\n",
     "- Under evnviornments, right click base root:\n",
     "\n",
-    "![alt text](anaconda-terminal.png)\n",
+    "![alt text](images/anaconda-terminal.png)\n",
     "\n",
     "\n",
     "Or, the old fashioned way:\n",
