--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Synchrotron Tune vs. Oscillation Amplitude\n",
+    "## 2. Betatron Tune vs. Oscillation Amplitude\n",
     "\n",
     "The two plots below are a trajectory plot plus a phase space plot. As the particle traverses the FODO structure, its position and angle are kept track of and plotted in the phase space plot. For $N_{turn}= 1$, follow and understand how the lines in the two plots are related to one another. A change in slope on the phase space plot corresponds to a “kink” seen in the trajectory plot, etc. \n",
     "- Change $N_{turn}$ to 2, 3, 4, 5, 10, and 100 watching the two plots each time. \n",
