--- a/Longitudinal-Dynamics.ipynb
+++ b/Longitudinal-Dynamics.ipynb
@@ -151,7 +151,7 @@
     "\n",
     "**Q4) What value (approximately) of $\\Delta E$ will the Radiofrequency system support now?**\n",
     "\n",
-    "hint: it may help to modify intitial phase as well, now that the stabile point has changed from $0^{\\circ}$ to $30^{\\circ}$.\n",
+    "hint: it may help to modify intitial phase as well, now that the stable point has changed from $0^{\\circ}$ to $30^{\\circ}$.\n",
     "\n",
     "\n",
     "**Q5) What happens to the particles that find themselves outside of the separatrix – are they lost from the synchrotron?**\n",
@@ -419,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
