Kiersten/Nick revamp, Trans-dyn sections 1 and 2

--- a/Transverse-Dynamics.ipynb
+++ b/Transverse-Dynamics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](images/uspas.png)\n",
+    "![alt text](uspas.png)\n",
     "# Fundamentals of Accelerator Physics and Technology \n",
     "### (with Simulations and Measurements Lab)\n",
     "# Computer Lab: Transverse Dynamics\n",
@@ -20,24 +20,7 @@
     "- '2**2' represents two squared, i.e. 2^2\n",
     "- A colon (:) means all values in that dimension. i.e. array[:,2] = all rows, second column\n",
     "- You can change the plot limits by adjusting the numbers in 'plt.ylim()'\n",
-    "\n",
-    "</br>\n",
-    "Also helpful: Shift+right click brings up OS/browser right-click menu, can copy image or save.\n",
-    "\n",
     "----------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
    ]
   },
   {
@@ -48,7 +31,7 @@
     "\n",
     "For transverse motion of a particle (beam) to be stable, the trace of the 2X2 transport matrix for each degree of freedom (horizontal and vertical) must be less than or equal to 2 in absolute value: |TrM| ≤2. For a simple FODO structure made up of focusing elements (of focal lengths ±F separated by a distance L) the condition is that F ≥L/2. \n",
     "\n",
-    "In following cells, the FODO cell parameters are initially F = 20 and L = 25 meters. The worksheet shows eight half-cells, or four full FODO cells, and a particle with initial conditions $x_{0,0}$ and $x’_{0,0}$ is tracked through the system. The indices on the position $x_{i,j}$ are for the j-th passage through the i-th element of the structure. The number of turns begins with $N_{turn}= 1$ and with $x_{0,0}= 5$. \n",
+    "In following cells, the FODO cell parameters are initially F = 8 and L = 10 meters. The worksheet shows eight half-cells, or four full FODO cells, and a particle with initial conditions $x_{0,0}$ and $x’_{0,0}$ is tracked through the system. The indices on the position $x_{i,j}$ are for the j-th passage through the i-th element of the structure. The number of turns begins with $N_{turn}= 1$ and with $x_{0,0}= 5$. \n",
     "- Gradually increase $N_{turn}$ to 2, 5, 10, 100 turns. While the particle starts out with a displacement of 5 mm, it ultimately reaches larger ones."
    ]
   },
@@ -58,30 +41,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing math library\n",
-    "import numpy as np\n",
+    "################################\n",
+    "# Change parameters in this cell\n",
+    "################################\n",
+    "\n",
+    "#Number of turns and half cells\n",
+    "N_turn1  = 1 # inital turns: 1 \n",
+    "N_hcell1 = 8 # inital half cells: 8\n",
     "\n",
     "#Defining some variables\n",
     "#These will be used later\n",
-    "F1       = 20 # initial: 20 meters\n",
-    "L1       = 25  # initial: 25 meters\n",
+    "L1       = 10  # distance between quadrupoles. initial: 10 meters\n",
+    "F1       = 8 # focal length of quadrupole lense. initial: 8 meters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "################################\n",
+    "# Don't change this cell\n",
+    "################################\n",
+    "\n",
+    "# Importing math library\n",
+    "import numpy as np\n",
     "\n",
     "# Phase advance\n",
     "amp = L1/(2*F1)\n",
     "mu1 = 2*np.arcsin(amp)\n",
     "print('mu:', np.rad2deg(mu1))\n",
     "\n",
-    "#Number of turns and half cells\n",
-    "N_turn1  = 1 # inital turns: 1 \n",
-    "N_hcell1 = 8 # inital half cells: 8\n",
     "\n",
     "# Calclating \n",
     "nu1 = (N_hcell1*np.arcsin(L1/(2*F1)))/(2*np.pi)\n",
     "print('nu:', nu1)\n",
     "\n",
-    "x1  = np.zeros((N_hcell1+1, N_turn1))\n",
-    "xp1 = np.zeros((N_hcell1+1, N_turn1))\n",
-    "s1  = np.zeros((N_hcell1+1, N_turn1))\n",
+    "x1  = np.zeros((N_hcell1+2, N_turn1))\n",
+    "xp1 = np.zeros((N_hcell1+2, N_turn1))\n",
+    "s1  = np.zeros((N_hcell1+2, N_turn1))\n",
+    "axp = np.zeros((N_hcell1+2, N_turn1)) ############\n",
     "\n",
     "# Initial conditions\n",
     "x1[0,0]  = 5e-3 # initial x displacement: 5 mm\n",
@@ -95,16 +95,30 @@
     "        x1[0,j]  = x1[-1,j-1]\n",
     "        xp1[0,j] = xp1[-1,j-1]\n",
     "        s1[0,j]  = 0\n",
-    "    for i in range(0,N_hcell1):\n",
+    "    \n",
+    "    q1 = -1/F1 # Stability condition    \n",
+    "    for i in range(0,N_hcell1+1):\n",
+    "        \n",
+    "        \n",
+    "        # -- first step is half drift     \n",
+    "        if (i==N_hcell1):\n",
+    "            L = L1/2.\n",
+    "            q = 0.\n",
+    "        else: \n",
+    "            q1 *= -1 # flip sign every quad\n",
+    "            q = q1\n",
+    "            L = L1\n",
+    "        if (i==0):\n",
+    "            L = L1/2.\n",
     "\n",
-    "            # Stability condition\n",
-    "            q1 = ((-1)**(i+2))*(1/F1)\n",
-    "            # Calculating x \n",
-    "            x1[i+1,j]  = x1[i,j] + L1*xp1[i,j]\n",
-    "            # Calculating x prime\n",
-    "            xp1[i+1,j] = xp1[i,j] + (x1[i,j]+xp1[i,j]*L1)*q1 \n",
-    "            # Calculating s\n",
-    "            s1[i+1,j]  = s1[i,j] + L1 \n",
+    "        # Calculating x \n",
+    "        x1[i+1,j]  = x1[i,j] + L*xp1[i,j]\n",
+    "        # Calculating x prime\n",
+    "        xp1[i+1,j] = xp1[i,j] + (x1[i,j]+xp1[i,j]*L)*q\n",
+    "        # Calculating s\n",
+    "        s1[i+1,j]  = s1[i,j] + L \n",
+    "\n",
+    "        axp[i,j] = xp1[i,j] + (x1[i,j]+xp1[i,j]*L)*q\n",
     "            \n",
     "# Importing plotting library\n",
     "import matplotlib\n",
@@ -114,13 +128,17 @@
     "\n",
     "# Plotting the data\n",
     "print('max x value in plot:', max(x1[:,0]), 'm')\n",
+    "plt.figure(figsize=[10,3])\n",
     "for p in range(0,N_turn1):\n",
-    "    plt.plot(s1[:,p],x1[:,p], '-', markersize=1)\n",
-    "plt.xticks(np.arange(0,L1*(N_hcell1+1),2*L1))\n",
+    "    plt.plot(s1[:,p],x1[:,p], '-', markersize=10,label='pass %i'%(p+1))\n",
     "plt.ylabel('x [m]', size=14)\n",
     "plt.xlabel('S [m]', size=14)\n",
+    "#plt.gca().set_xticks(np.arange(10,170,10))\n",
     "plt.grid()\n",
-    "plt.show()"
+    "if N_turn1 < 11:\n",
+    "    plt.legend(loc='upper left',bbox_to_anchor=(1,1))\n",
+    "\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -129,31 +147,32 @@
    "source": [
     "**Q1) What is the largest displacement the particle attains in the structure?**\n",
     "\n",
+    "**Q2) At what locations in S are the focusing quadrupoles? Defocusing quadrupoles?**\n",
     "\n",
-    "**Q2) Where in the FODO structure i.e. at the F, D, or O (drift) does this maximum displacement occur?**\n",
+    "**Q3) Where in the FODO structure i.e. at the F, D, or O (drift) does the maximum displacement occur?**\n",
     "\n",
     "---\n",
     "- Return $N_{turn}$ to 1. \n",
     "- Adjust the focal length, F, until the parameter $\\mu$ is 90°. \n",
-    "- Change the number of half-cells to Ncell= 20. Look at the plot of the trajectory.\n",
+    "- Change the number of half-cells to Ncell= 20.\n",
     "\n",
-    "**Q3) How many full cells (50 meter units) does it take for the pattern to repeat itself?**\n",
+    "**Q4) For what value of F does $\\mu=90^{\\circ}$? How many full cells (20 meter units) does it take for the pattern to repeat itself?**\n",
     "\n",
+    "This is the point where the particle has made one full oscillation in x, which corresponds to moving 360° around the phase space ellipse.\n",
     "\n",
-    "**Q4) For what value of F does $\\mu=60^{\\circ}$?**\n",
+    "**Q5) For what value of F does $\\mu=60^{\\circ}$? How many full cells (20 meter units) does it take for the pattern to repeat itself?**\n",
     "\n",
-    "\n",
-    "**Q5) How many full cells (50 meter units) does it take for the pattern to repeat itself?  How would you interpret the parameter $\\mu$?**\n",
-    "\n",
+    "**Q6) How would you interpret the parameter $\\mu$?**\n",
     "\n",
     "---\n",
     "\n",
     "The FODO system will be unstable when |TrM| > 2 or when F < L/2. \n",
-    "- Leaving the other parameters alone, set F = 12.499. \n",
-    "- Note that the parameter $\\mu$ becomes imaginaryc (and causes a python error)!\n",
-    "- Look at the particle’s trajectory.\n",
+    "- Leaving the other parameters alone, set F = 4.9\n",
+    "- Note that the parameter $\\mu$ becomes imaginary (and causes a python error)!\n",
     "\n",
-    "**Q6) If the vacuum chamber is 7 centimeters away from the particle’s ideal orbit, how far will the particle travel before it reaches the chamber wall?**\n",
+    "**Q7) If the vacuum chamber is 10 centimeters away from the particle’s ideal orbit, how far will the particle travel before it reaches the chamber wall?**\n",
+    "\n",
+    "**Q8) Try moving F closer to (but still below) the stability limit, F = L/2. What happens to the particle orbit?**\n",
     "\n",
     "---"
    ]
@@ -162,14 +181,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Betatron Tune vs. Oscillation Amplitude\n",
+    "## 2. Synchrotron Tune vs. Oscillation Amplitude\n",
     "\n",
-    "The two plots below are a trajectory plot plus a phase space plot. As the particle traverses the FODO structure, its position and angle are kept track of and plotted in the phase space plot. For $N_{turn}= 1$, follow and understand how the lines in the two plots are related to one another. A change in slope on the phase space plot corresponds to a “kink” seen in the trajectory plot, etc. \n",
+    "The two plots below are a trajectory plot plus a phase space plot. As the particle traverses the FODO structure, its position and angle are kept track of and plotted in the phase space plot. For $N_{turn}= 1$, follow and understand how the lines in the two plots are related to one another. A change in slope on the phase space plot corresponds to a “kink” seen in the trajectory plot, etc. Note that the location of the quadrupole magnets are shifted by 5 meters compared to the plots in Part 1.\n",
     "- Change $N_{turn}$ to 2, 3, 4, 5, 10, and 100 watching the two plots each time. \n",
     "\n",
-    "**Q7) Print out or make a sketch of this phase space plot and identify with each ellipse its corresponding quadrupole (F or D) and whether it is at the entrance or exit of the magnet.**\n",
-    "\n",
-    "Hint: Pick a particle on one of the ellipses and ask how it would move if it were tracked through a drift - what happens to the position (x) of a particle with a positive or negative angle? How does a lens, F or D, alter the trajectory of a particle with (x,x’)=(+,-), (x,x’)=(+,+), etc. \n"
+    "**Q7) Print out or make a sketch of this phase space plot and identify with each ellipse its corresponding quadrupole (F or D) and whether it is at the entrance or exit of the magnet.**\n"
    ]
   },
   {
@@ -178,19 +195,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###########################\n",
+    "# Make changes in this cell\n",
+    "###########################\n",
+    "\n",
+    "#Number of turns \n",
+    "N_turn2  = 1 # initial turn number = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#################################\n",
+    "# Do not change code in this cell\n",
+    "#################################\n",
+    "\n",
+    "#Number of turns and half cells\n",
+    "N_hcell2 = 16 # initial cells = 16\n",
+    "\n",
+    "\n",
     "#Defining some variables\n",
     "#These will be used later\n",
-    "F2  = 20  # initial = 20 m\n",
-    "L2  = 25  # initial = 25 m\n",
+    "F2  = 8  # initial = 20 m\n",
+    "L2  = 10  # initial = 25 m\n",
+    "\n",
+    "#Number of turns and half cells\n",
+    "N_turn2  = 1 # initial turn number = 1\n",
+    "N_hcell2 = 16 # initial cells = 16\n",
+    "\n",
     "\n",
     "# Phase advance\n",
     "amp2 = L2/(2*F2)\n",
     "mu2  = 2*np.arcsin(amp2)\n",
     "print('mu:', np.rad2deg(mu2))\n",
     "\n",
-    "#Number of turns and half cells\n",
-    "N_turn2  = 1 # initial turn number = 1\n",
-    "N_hcell2 = 16 # initial cells = 16\n",
     "\n",
     "# Calclating \n",
     "nu2 = (N_hcell2*np.arcsin(L2/(2*F2)))/(2*np.pi)\n",
@@ -234,21 +276,49 @@
     "#Setting resolution of plot (changes size too)\n",
     "matplotlib.rcParams['figure.dpi'] = 100\n",
     "\n",
-    "# Plotting the data\n",
+    "from cycler import cycler\n",
+    "n = (N_turn2 if N_turn2 > 1 else np.shape(x2)[0])\n",
+    "color = plt.cm.hsv(np.linspace(0.1,0.9,n)) # This returns RGBA; convert:\n",
+    "#color = plt.get_cmap('tab20c').colors\n",
+    "custom_cycler = (cycler(color=color))\n",
+    "\n",
+    "##################\n",
+    "# Trajectory plot\n",
+    "##################\n",
     "plt.figure(1)\n",
-    "for p2 in range(0,N_turn2):\n",
-    "    plt.plot(s2[:,p2],x2[:,p2]*10**3, '-', markersize=1)\n",
+    "plt.gca().set_prop_cycle(custom_cycler)\n",
+    "\n",
+    "if N_turn2 == 1:\n",
+    "    plt.plot(s2[:,0],x2[:,0]*10**3, '-k', markersize=1,alpha=.2)\n",
+    "    for point in range(np.shape(x2)[0]):\n",
+    "        plt.plot(s2[point,0],x2[point,0]*10**3, '.', markersize=10)\n",
+    "else: \n",
+    "    for p2 in range(0,N_turn2):\n",
+    "        plt.plot(s2[:,p2],x2[:,p2]*10**3, '-', markersize=1)\n",
+    "        \n",
     "plt.ylabel('x [mm]', size=14)\n",
     "plt.xlabel('S [m]', size=14)\n",
     "plt.grid()\n",
     "plt.show()\n",
-    "# Phase space\n",
+    "\n",
+    "##################\n",
+    "# Phase space plot\n",
+    "##################\n",
     "plt.figure(2)\n",
-    "for turn in range(0,N_turn2):\n",
-    "    plt.plot(x2[:,turn]*10**3,xp2[:,turn]*10**3, '.')#, markersize=1)\n",
+    "plt.gca().set_prop_cycle(custom_cycler)\n",
+    "\n",
+    "if N_turn2 ==1:\n",
+    "    plt.plot(x2[:,0]*10**3,xp2[:,0]*10**3, '-k',alpha=.2)\n",
+    "    for point in range(np.shape(x2)[0]):\n",
+    "        plt.plot(x2[point,0]*10**3,xp2[point,0]*10**3, '.', markersize=10)\n",
+    "else:    \n",
+    "    for turn in range(0,N_turn2):\n",
+    "        plt.plot(x2[:,turn]*10**3,xp2[:,turn]*10**3, '-k',alpha=.05)\n",
+    "        plt.plot(x2[:,turn]*10**3,xp2[:,turn]*10**3, '.', markersize=10)\n",
+    "    \n",
     "plt.ylabel('xp [mrad]', size=14)\n",
     "plt.xlabel('x [mm]', size=14)\n",
-    "plt.grid()\n",
+    "plt.grid(False)\n",
     "plt.show()"
    ]
   },
@@ -288,8 +358,6 @@
     "#Number of turns and half cells\n",
     "N_turn3  = 1  # initial = 1\n",
     "N_hcell3 = 20 # initial = 20\n",
-    "# Choose whether or not to plot the orbit averaged over number of turns\n",
-    "plot_average_flag=False\n",
     "\n",
     "#Angles in radians(?)\n",
     "theta_1 = 0.05e-3 # initial = 0.05 mrad\n",
@@ -336,8 +404,6 @@
     "plt.figure(3)\n",
     "for p3 in range(0,N_turn3):\n",
     "    plt.plot(s3[:,p3],x3[:,p3]*10**3, '-', markersize=1)\n",
-    "if plot_average_flag == True:\n",
-    "    plt.plot(s3[:,0],x3.mean(axis=1)*10**3,'k--',linewidth=3)\n",
     "plt.ylabel('x [mm]', size=14)\n",
     "plt.xlabel('S [m]', size=14)\n",
     "plt.ylim(-26,26)\n",
@@ -349,23 +415,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q8) What steering error, $\\theta_1$ would generate a ~25 mm (1 inch) maximum displacement of the closed orbit in the beam pipe?**\n",
-    "                \n",
-    "hint: Be careful! The closed orbit displacement is NOT the particle displacement! Remember, a particle on the closed orbit will follow the same path every turn, while all other particles oscillate around the closed orbit. \n",
+    "**Q8) What steering error, $\\theta_1$ would generate a ~25 mm (1 inch) maximum displacement of the close orbit in the beam pipe?**\n",
     "\n",
-    "The closed orbit can be calculated by averaging orbits over a large number of turns. To plot the averaged orbit for toe selected number of turns, set plot_average_flag = True. \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "---\n",
     "In addition to a steering “error” being defined at z1 two steering correctors are defined at locations z2 and z3. These two are initially set to zero, and the trajectory is plotted. \n",
     "- Carefully adjust the strengths of these two correctors (theta_2, and theta_3) so that a particle whose trajectory starts with x = 0, x’ = 0 before $\\theta_1$ ends up with x = 0 and x’ = 0 after $\\theta_3$. Check the “closure” of your “orbit bump” by changing $N_{turn}$ to some large value and seeing that the orbit indeed repeats itself.\n",
     "\n",
-    "**Q9) For $\\theta_1=0.05$, what values of $\\theta_2$ and $\\theta_3$ are required to bring the trajectory back to x = 0 and x' = 0?**"
+    "**Q9) For $\\theta_1=0.05$, what values of $\\theta_2$ and $\\theta_3$ are required to bring the trajectory back to x = 0 and x' = 0?**\n"
    ]
   },
   {
@@ -380,7 +437,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -392,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
