Kiersten/Nick revamp, long-dyn section 1+2

--- a/Longitudinal-Dynamics.ipynb
+++ b/Longitudinal-Dynamics.ipynb
@@ -56,7 +56,8 @@
     "In the worksheet program, the user can vary the parameters of the basic equations of motion to produce phase space plots in $\\Delta E_0 -\\phi$ coordinates.  \n",
     "The default parameters are typical of Fermilab Main Injector operation at its injection energy.  \n",
     "By inputting various initial conditions one can explore the phase space region under various parameter regimes.  \n",
-    "For example: The synchronous phase is initialized to 0. For this value locate the separatrix.\n",
+    "\n",
+    "You should notice that the initial energy deviations $\\Delta E$ are different for each particle, but they are all launched from the same initial phase, $\\phi = 0$.\n",
     "\n"
    ]
   },
@@ -67,14 +68,19 @@
    "outputs": [],
    "source": [
     "#Importing the libraries we need\n",
+    "#Importing plotting library\n",
     "import numpy as np\n",
+    "import matplotlib\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "#Defining some variables\n",
     "#These will be used later\n",
-    "h      = 588 #constant = 588\n",
-    "eV     = 1.28*10**-13  #constant = 1.28*10**-13 joule\n",
-    "GeV    = 1.6*10**-10   #constant = 10**9*eV\n",
-    "MeV    = GeV*10**-3    #constant = GeV*10**-3"
+    "h           = 588                #constant = 588\n",
+    "cavityField = 800000.            #Cavity field in Volts\n",
+    "e_chg       = 1.602*10**-19      #fundamental charge in Coulombs\n",
+    "eV          = cavityField*e_chg  #cavity field*particle charge in Joules\n",
+    "GeV         = e_chg*10**9        #constant = 10**9*e_chg\n",
+    "MeV         = GeV*10**-3         #constant = GeV*10**-3"
    ]
   },
   {
@@ -83,26 +89,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "initial_deltaE = [2,4,6,8,10.] # Values are in MeV initial: [2,4,6,8,10]\n",
+    "initial_phases = [0.,0.,0.,0.,0.] # Values are in deg initial: [0,0,0,0,0]\n",
+    "nturns1 = 400    #number of turns the particles travel: initial = 400\n",
+    "phi_s1  = np.deg2rad(0) #Synchronous phase: initial = 0\n",
+    "\n",
     "E_s1    = 8*GeV         # Energy: initial = 8 GeV\n",
     "g_t1    = 21.8          # gamma_t: initial = 21.8\n",
+    "\n",
     "eta1    = 1/g_t1**2 - (0.938*GeV)**2 / E_s1**2\n",
     "beta_s1 = np.sqrt(1 - ( (0.938*GeV) / E_s1 )**2 )  # Relativistic beta\n",
     "k1      = (2*np.pi*h*eta1)/(beta_s1**2 * E_s1)  # coefficent (2pi h eta)/ E\n",
     "\n",
     "#Tracking n Particles\n",
     "#Change phi_vals[:,0] and dE_0[:,0] below to change the plot.\n",
-    "n       = 5      #number of particles: initial = 5\n",
-    "nturns1 = 400    #number of turns the particles travel: initial = 400\n",
-    "phi_s1  = np.deg2rad(0) #Synchronous phase: initial = 0\n",
-    "\n",
+    "n       = len(initial_deltaE)      #number of particles: initial = 5\n",
     "\n",
     "# Creating some arrays to hold the data\n",
     "dE_vals1  = np.zeros((n,nturns1)) \n",
     "phi_vals1 = np.zeros((n,nturns1))\n",
     "\n",
     "#Setting initial conditions:\n",
-    "dE_vals1[:,0]  = np.array([2,4,6,8,10])*MeV # Initial Energy of particles in MeV: 2,4,6,8,10\n",
-    "phi_vals1[:,0] = np.deg2rad([0,0,0,0,0])   # Intial Phase of particles: 0,0,0,0,0\n",
+    "dE_vals1[:,0]  = np.array(initial_deltaE)*MeV    # Initial Energy of particles in MeV: 2,4,6,8,10\n",
+    "phi_vals1[:,0] = np.deg2rad(initial_phases)      # Intial Phase of particles: 0,0,0,0,0\n",
     "\n",
     "#Calculating dE and phase for each particle for nturns.\n",
     "for i in range(0,nturns1-1):\n",
@@ -115,15 +124,13 @@
     "    #phi_n+1 = phi + k * dE_n + eV ( sin(phi_n) - sin(phi_s) )\n",
     "    phi_vals1[:,i+1] = radians1 + k1* ( dE_vals1[:,i] + eV* ( np.sin(radians1) - np.sin(phi_s1)) ) \n",
     "    \n",
-    "# Importing plotting library\n",
-    "import matplotlib\n",
-    "from matplotlib import pyplot as plt\n",
     "#Setting resolution of plot (changes size too)\n",
     "matplotlib.rcParams['figure.dpi'] = 100 #initial = 100, Increase number for bigger plots\n",
     "\n",
     "# Plotting the data\n",
     "degrees1    = np.rad2deg(phi_vals1) #Deg\n",
     "plt.plot(degrees1,dE_vals1/MeV, '.', markersize=1)\n",
+    "plt.plot(degrees1[:,0],dE_vals1[:,0]/MeV,'or')\n",
     "plt.xlabel('Phase [deg]', size=14)\n",
     "plt.ylabel('$\\Delta$ Energy [MeV]', size=14)\n",
     "plt.show()"
@@ -133,16 +140,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q1) What value of $\\Delta E$ will the radiofrequency system support under these conditions?**\n",
+    "**Q1) The plot you see initially should show stable orbits on closed ellipses. At large energy offsets we expect very different behavior. By changing the initial energy of one particle in the array `initial_deltaE` in small steps (~1 MeV) find the largest value of $\\Delta E$ that the radiofrequency system will support in this accelerator?** \n",
     "\n",
     "Please specify in MeV to at least one decimal place (eg, 10.0)\n",
     "\n",
     "\n",
-    "**Q2) What happens to the particles that find themselves outside of the separatrix – are they lost from the synchrotron?  \n",
-    "Hint: Look at the motion of a particle that is very near the separatrix.**\n",
+    "**Q2) We call the boundary between well-behaved elliptal orbits and the unstable motion that you found in Q1 the 'separatrix'. What happens to the particles that find themselves outside of this separatrix – are they lost from the synchrotron?** \n",
     "\n",
     "\n",
-    "**Q3) How does the motion behave near the “unstable fixed points”?**\n",
+    "\n",
+    "**Q3) For particles that are still within, but very close to the separatrix, how many turns does it take to complete one revolution in the phase space? Where are the stable and unstable fixed points? (in phase and $\\Delta$ E coordinates)**\n",
     "\n",
     "\n",
     "---\n",
@@ -157,19 +164,19 @@
     "**Q5) What happens to the particles that find themselves outside of the separatrix – are they lost from the synchrotron?**\n",
     "\n",
     "\n",
-    "**Q6) How does the motion behave near the “unstable fixed points”?**\n",
+    "**Q6) For particles that are still within, but very close to the separatrix, how many turns does it take to complete one revolution in the phase space? Where are the stable and unstable fixed points? (in phase and $\\Delta$ E coordinates)**\n",
     "\n",
     "\n",
     "\n",
     "---\n",
-    "Next, leaving the other parameters as they are, change the energy of the particle, $E_s$, from 8 GeV to 150 GeV.  \n",
-    "Where is the stable phase space region located now?  \n",
-    "(note: the transition energy of the Main Injector is about 22; what happens at transition?)\n",
+    "Next, set `initial_deltaE` back to `[2,4,6,8,10]` and change `nturns1` to 1000, leaving the other parameters as they are, change the energy of the particle, $E_s$, from 8 GeV to 150 GeV.  \n",
+    "**Q7) By changing the values in `initial_phases` locate the stable phase region - where is the stable fixed point?.**  \n",
+    "(note: the transition energy of the Main Injector is about 22; if you've covered this in lecture - what happens at transition?)\n",
     "\n",
     "\n",
     "\n",
-    "**Q7) What maximum $\\Delta E$ will the RF system support now?**\n",
-    "Hint - you will need to find the optimal phase (phi_vals1) and increase the number of turns.\n",
+    "**Q8) What maximum $\\Delta E$ will the RF system support now?**\n",
+    "Hint - you may need to increase the number of turns.\n",
     "\n"
    ]
   },
@@ -204,8 +211,9 @@
    "source": [
     "## 2. Synchrotron Tune vs. Oscillation Amplitude\n",
     "\n",
-    "In section #1, it should have been noticed that the motion i.e. the frequency at which particles circulate in phase space, slows down when the particle is near the separatrix, especially near the “unstable fixed points”. The Python library Numpy has a Fast Fourier Transform (FFT) function that allows one to analyze data for frequency content. \n",
-    "The following code is similar to the previous code, but tracks a single particle. The motion of that particle is then analyzed using the FFT function, and the frequency (or, in this case, the synchrotron “tune”) of the particle’s motion is estimated by looking at what tune value corresponds to the peak of the FFT coefficients.\n",
+    "In section #1, you should have noticed that the frequency at which a particle circulate in phase space, decreases when the particle is near the separatrix, especially near the “unstable fixed points”. To measure the synchroton tune in a real accelerator, we don't normally have access to the $Delta E$ coordinate of beam, and have to settle for a measurement of the phase alone. By looking at the frequency of the oscillation in phase we can deduce the synchrotron tune. The tool we use to extract frequency from phase data is called a `Fast Fourier Transform(FFT)`. In this section we will apply an FFT simulated data from the Fermilab Main Injector. \n",
+    " \n",
+    "The following code is similar to the previous code, but tracks a single particle. The motion of that particle is then analyzed using the FFT function, and the frequency (or, in this case, the synchrotron “tune”) of the particle’s motion is estimated by finding the strongest peaks in the plot of the FFT output.\n",
     "This expression is reproduced in Python so that the result of the FFT can be directly compared with the analytical result obtained by solving the equations of motion of a particle’s longitudinal motion.\n",
     "\n",
     "- Track a particle for 254 turns (note: an FFT calculation requires that one track for 2n-2 turns, where n is an integer) \n",
@@ -220,10 +228,12 @@
    "outputs": [],
    "source": [
     "#Tracking 1 Particle\n",
-    "#Change phi_vals and dE_vals below to change the plot.\n",
-    "power   = 8            #Used to decide number of turns and FFT, initial = 8\n",
-    "nturns2 = (2**power)-2  #number of turns to track: initial = 254\n",
-    "phi_s2  = 0             #Synchronous phase: initial = 0\n",
+    "\n",
+    "nturns2 = 254 # number of turns to track: initial = 254\n",
+    "particle_dE = 1*MeV # Initial energy error of particle. initial = 1MeV\n",
+    "\n",
+    "# Don't change anything below here!\n",
+    "phi_s2  = 0             # Synchronous phase: initial = 0\n",
     "E_s2    = 8*GeV         # Energy: initial = 8GeV\n",
     "g_t2    = 21.8          # gamma_t: constant = 21.8\n",
     "eta2    = 1/g_t2**2 - (0.938*GeV)**2 / E_s2**2\n",
@@ -236,7 +246,7 @@
     "\n",
     "#Setting initial conditions:\n",
     "voltage      = 800*1.6*10**-16 # voltage constant = 800 e*kV\n",
-    "dE_vals2[0]  = np.array(1)*MeV # Initial Energy of particles in MeV: 1 MeV\n",
+    "dE_vals2[0]  = np.array(particle_dE) # Initial Energy of particles in MeV: 1 MeV\n",
     "phi_vals2[0] = np.deg2rad(0)   # Intial Phase of particles: 0\n",
     "\n",
     "#Calculating dE and phase for each particle for nturns.\n",
@@ -270,9 +280,8 @@
     "# Calculating FFT \n",
     "n   = len(degrees2)            # length of the signal\n",
     "frq = np.arange(n)/n           # two sides frequency range\n",
-    "frq = frq[range(int(n/2))]     # one side frequency range\n",
-    "Y   = np.fft.fft(degrees2)/power # fft computing and normalization\n",
-    "Y   = Y[range(int(n/2))]\n",
+    "Y   = np.fft.fft(degrees2) # fft computing\n",
+    "Y   = Y/max(abs(Y))        # normalization\n",
     "\n",
     "#Plotting FFT \n",
     "plt.figure()\n",
@@ -299,10 +308,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q8) What synchrotron tune does the FFT of the tracking data show? How does this compare with the analytically predicted value?**\n",
-    "- Try varying the number of turns tracked, such as 126, 510, 2046, etc.\n",
+    "**Q9) What synchrotron tune does the FFT of the tracking data show? How does this compare with the analytically predicted value?**\n",
     "\n",
-    "**Q9) For what number of turns is the FFT result within 5% of the predicted result?**\n",
+    "**Q10) For what number of turns is the FFT result within 5% of the predicted result?**\n",
     "\n",
     "---"
    ]
@@ -315,7 +323,7 @@
     "- **How does the tune behave?** \n",
     "- Record your numbers in the arrays in the next cell, so you can plot them.\n",
     "\n",
-    "**Q10) Based on the code above, make a plot of $\\nu_{FFT}$ vs. $\\Delta E_0$ for $\\Delta E$ from 1 MeV to 26 MeV.**\n",
+    "**Q11) Based on the code above, make a plot of $\\nu_{FFT}$ vs. $\\Delta E_0$ for $\\Delta E$ from 1 MeV to 26 MeV.**\n",
     "- Note the value of $\\Delta E$ at the separatrix.\n",
     "- Study the synchronous tune vs. amplitude for other synchronous phases, $\\phi_s$ (phi_s2)."
    ]
@@ -327,7 +335,13 @@
    "outputs": [],
    "source": [
     "nu_fft = np.array([0.01172,0,0,0,0]) #.... continue filling in array\n",
-    "dE_fft = np.array([1,2,4,8,10])      #.... continue filling in array"
+    "dE_fft = np.array([1,2,4,8,10])      #.... continue filling in array\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(dE_fft, nu_fft, '.-')\n",
+    "plt.ylabel(r'$\\nu$', size=14)\n",
+    "plt.xlabel(r'$\\Delta E$', size=14)\n",
+    "plt.show()"
    ]
   },
   {
@@ -389,12 +403,15 @@
     "#Setting resolution and size of plots\n",
     "matplotlib.rcParams['figure.dpi'] = 100\n",
     "# Plotting the data\n",
-    "Nf       = 900 #Number of turns to plot: initial = 900\n",
+    "Nf       = Nmax \n",
     "degrees3 = np.rad2deg(phi_vals3) #Deg\n",
-    "plt.plot(degrees3[:Nf],dE_vals3[:Nf]/MeV, '-', markersize=1)\n",
+    "plt.plot(degrees3[Nporch3:Nporch3+Nparab3],dE_vals3[Nporch3:Nporch3+Nparab3]/MeV, '-',color=(0.6,0.6,0.6), markersize=1,label='Parabolic Ramp')\n",
+    "plt.plot(degrees3[:Nporch3],dE_vals3[:Nporch3]/MeV, '-r', markersize=1,label='Injection Porch')\n",
+    "plt.plot(degrees3[Nporch3+Nparab3:-1],dE_vals3[Nporch3+Nparab3:-1]/MeV, '-b', markersize=1,label='Final Acceleration')\n",
     "plt.xlabel('Phase [deg]', size=14)\n",
     "plt.ylabel('$\\Delta$ Energy [MeV]', size=14)\n",
     "plt.grid()\n",
+    "plt.legend(loc='upper left',bbox_to_anchor=(0,-.2))\n",
     "plt.show()"
    ]
   },
@@ -402,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q11) What is the synchrotron period in this example?**\n",
+    "**Q12) By changing the value of `Nporch3` find the synchrotron period at both the Injection Porch and Final Acceleration? (How many turns does it take to close the red and blue circles?)**\n",
     "\n",
     "---\n",
     "- Vary Nf from 900 to the final value of 3000 in steps of 300. \n",
@@ -413,15 +430,22 @@
     "- The process becomes non-adiabatic and the emittance is not preserved. \n",
     "- In general, if the motion is to be adiabatic, then the system parameters must change much more slowly than the period of the motion.\n",
     "\n",
-    "**Q12) What is the approximate fewest number of turns one can make the phase change in and still preserve the initial emittance?**"
+    "**Q13) What is the approximate fewest number of turns one can make the phase change in and still preserve the initial emittance?**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -433,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
