--- a/FODO-transport.ipynb
+++ b/FODO-transport.ipynb
@@ -33,13 +33,15 @@
     "\n",
     "We define the matched solution using the Twiss parameters $\\beta_x$, $\\beta_y$, $\\alpha_x$, $\\alpha_y$ (the spotsize and angular divergence are related to the Twiss parameters through the beam emittance). In this part of the exercise we will calculate matched beam properties for a simple FODO transport line and observe the difference in matched and unmatched transport.\n",
     "\n",
-    "| Species  | Election  |   \n",
+    "| Parameter  | Value  |   \n",
     "|---|---| \n",
+    "| Species  | Electron  |  \n",
     "| Energy  | 1 GeV  |   \n",
     "|  X emittance | $\\epsilon_x = 6$ mm-mrad  |  \n",
     "|  Y emittance |  $\\epsilon_y = 6$ mm-mrad |  \n",
-    "|  Quadrupole geometric strength | $K = 0.6$ m$^{-2}$|\n",
-    "|  FODO cell length | $L = 5$ m|\n",
+    "|  half-length of FODO cell | $L = 2.5$ m  |\n",
+    "|  Quadrupole geometric strength | $K_1$ $= 0.6$ $m^{-2}$    |\n",
+    "|  Quadrupole length | $L_{quad}$$=0.5$ m |\n",
     "\n",
     "\n",
     "A) Open simulation “FODObeamline.” \n",
@@ -93,7 +95,9 @@
     "- $\\psi_x=\\int \\frac{ds}{\\beta_x(s)}$\n",
     "- Thankfully, Elegant calculates this for you. \n",
     "\n",
-    "**Q0) In the next cell, calculate the X and Y phase advances for the single FODO cell. (Search for nux and nuy under “Output Parameters” and recall $\\psi=\\nu*2\\pi$)**"
+    "**Q0) In the next cell, calculate the X and Y phase advances for the single FODO cell. (Search for nux and nuy under “Output Parameters” and recall $\\psi=\\nu*2\\pi$)**\n",
+    "\n",
+    "Note that Elegant displays units as $1/(2\\pi)$. This is meant to indicate that the tune is number of oscillations divided by \"revolutions,\" which in this case is passes through our single-cell lattice."
    ]
   },
   {
@@ -112,9 +116,9 @@
     "These are the “phase advance per cell,” which is an important metric for characterizing transport properties of any periodic lattice. The phase advance has to be chosen to avoid instabilities and resonant conditions.\n",
     "Syphers exercise 3.12 derives these expressions for maximum and minimum betatron function for a FODO lattice in the thin-lens approximation: \n",
     "\n",
-    "$\\beta_{max}=L \\frac{1 + sin \\psi/2}{sin \\psi}$\n",
+    "$\\beta_{max}=2L \\frac{1 + sin( \\psi/2)}{sin \\psi}$\n",
     "\n",
-    "$\\beta_{min}=L \\frac{1 - sin \\psi/2}{sin \\psi}$\n",
+    "$\\beta_{min}=2L \\frac{1 - sin(\\psi/2)}{sin \\psi}$\n",
     "\n",
     "\n",
     "Answer the following questions:"
@@ -125,8 +129,14 @@
    "metadata": {},
    "source": [
     "**Q1) For this cell, calculate $\\beta_{min}$ and $\\beta_{max}$ in two ways:**\n",
-    "- thin lense prediction\n",
-    "- using elegant (look at twiss_output plot)\n",
+    "- A) thin lens prediction\n",
+    "- B) using elegant (look at twiss_output plot or \"Output Parameters\" list)\n",
+    "\n",
+    "The answer to (A) and (B) should be quite close, but slightly different. \n",
+    "\n",
+    "**Q2) If you increased the length of the quadrupole elements while holding both the cell length L and the phase advance $\\psi$ fixed, will the difference between (A) and (B) get larger or smaller?  Explain your reasoning.**\n",
+    "\n",
+    "Note: by keeping L and $\\psi$ fixed, we fix the average focusing strength per unit length.\n",
     "\n"
    ]
   },
@@ -287,7 +297,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "py3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -299,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
